# CI2024_lab3

./: .gitignore  README.md  n-puzzle.ipynb  npuzzle.py  pyproject.toml
